Fix data receiving from external APIs (change sources)